Implement secure JWT authentication with access + refresh tokens
This commit implements a complete, production-ready authentication system
with the following features:

## Backend Changes (Spring Boot)
- Add RefreshToken entity and repository for database-tracked tokens
- Enhance JwtTokenProvider to support access (15min) and refresh (7days) tokens
- Implement RefreshTokenService with token rotation and scheduled cleanup
- Update AuthService with new login/refresh/logout flows
- Refactor AuthController to support refresh tokens via HttpOnly cookies
- Update SecurityConfig to enable CORS credentials and configure endpoints
- Add @EnableScheduling for automated token cleanup
- Update application.properties with new JWT configuration

## Frontend Changes (React + TypeScript)
- Install Axios for HTTP requests
- Create apiClient.ts with automatic token refresh interceptors
- Update AuthContext to use new auth flow with access tokens
- Add new type definitions for AuthTokenResponse and RefreshTokenResponse
- Refactor API service to use Axios client
- Update Login component to use new authentication flow

## Security Features
- Access tokens: 15 minutes (short-lived for API calls)
- Refresh tokens: 7 days (long-lived, HttpOnly cookie)
- Token rotation: New refresh token on every refresh
- Server-side revocation: Database-tracked tokens
- Auto-refresh: Axios interceptor handles 401 errors seamlessly
- HttpOnly cookies: Refresh token not accessible to JavaScript

## UX Improvements
- Seamless 7-day sessions (no frequent logouts)
- Background token refresh (transparent to user)
- Proper logout with server-side token invalidation
- Clean separation of concerns (access vs refresh tokens)

## Documentation
- Add comprehensive ARCHITECTURE_DOCUMENTATION.md
- Detailed flow diagrams and API contracts
- Security considerations and deployment guide

This architecture follows industry best practices and balances
security with user experience.